--- a/ThermalHelper/Properties/launchSettings.json
+++ b/ThermalHelper/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "ThermalHelper": {
       "commandName": "Project",
-      "commandLineArgs": "thermalhlp:AUTO@Two_Pilots@0@25@250"
+      "commandLineArgs": "thermalhlp:EASY@Two_Pilots@0@25@250"
     }
   }
 }
